<resources>
    <array name="users">
        <item>Naglah Owner</item>
        <item>driver</item>
    </array>
    <array name="carsType">
        <item>Touta</item>
        <item>Lancar</item>
        <item>Mercedes</item>
        <item>Chevrolet</item>
        <item>Mazda</item>
    </array>

    <string name="app_name">Naglah</string>
    <string name="create_new_account">Create new account</string>
    <string name="forget_password">Forget Password?</string>
    <string name="login">Sign In</string>
    <string name="email">Email</string>
    <string name="noUserName">No user name</string>
    <string name="noPassword">No password  </string>
    <string name="register">Create new account</string>
    <string name="password">Password </string>
    <string name="phone">Phone</string>
    <string name="name">Name</string>
    <string name="noPhone">No Phone number</string>

    <string name="noEmail">No Email</string>
    <string name="enterCode">Enter the code here </string>
    <string name="userType">User type</string>
    <string name="completeData">Complete data</string>
    <string name="shortPassword">Password must be at least 6 characters long</string>
    <string name="poorConnection">Internet connection is poor</string>
    <string name="serverError">Server error</string>
    <string name="uploadImage">Upload Photo</string>
    <string name="networkException">java.net.SocketTimeoutException: timeout</string>


    <string name="date_and_time_order">Select the trip time</string>
    <string name="immediately">Now</string>
    <string name="later">Later</string>
    <string name="date">Date</string>
    <string name="day">Today</string>
    <string name="cancel">Cancel</string>
    <string name="submit">Submit</string>
    <string name="time">Time</string>
    <string name="about_order">More details</string>
    <string name="car_info">Car information</string>
    <string name="car_type">Car type</string>
    <string name="choose_car_image">Select the image of the car</string>
    <string name="panal_id">Panal number</string>
    <string name="maximum_weight">Maximum weight (kgm)</string>
    <string name="driver_name">Driver name</string>
    <string name="city">City</string>
    <string name="country">Country</string>
    <string name="region">Region</string>

    <string name="ok">Ok</string>
    <string name="userNameError">The email or password is incorrect </string>
    <string name="selectTypeOfLogin">Select user type</string>
    <string name="order_owner">request owner</string>
    <string name="order_type">request type</string>
    <string name="nglah_type">Naglah type</string>
    <string name="details">Naglah details</string>
    <string name="price">Price</string>
    <string name="order_page">Order Page</string>
    <string name="order_Date">Order date</string>
    <string name="errorCode">Invalid code</string>
    <string name="complteData">Complete data</string>
    <string name="no_data_found">No data </string>
    <string name="userName">User name</string>
    <string name="send">Send</string>
    <string name="updateSuccessful">Update success</string>
    <string name="recharge_card">Recharge</string>
    <string name="card_number">Card number</string>
    <string name="card_holder">The amount</string>
    <string name="month">Month</string>
    <string name="year">Year</string>
    <string name="cvv">Cvv</string>
    <string name="pay">Pay</string>
    <string name="money">Money</string>
    <string name="addNaqlahaSuccessful">Add Naqlaha Successful</string>
    <string name="successfulTransaction">Successful Transaction</string>
    <string name="inValidCardNumber">InValid Card Number</string>
    <string name="naqlaOwner">Naglah owner</string>
    <string name="driverOwner">Car owner</string>
    <string name="driverInfo">Driver information</string>

    <string name="Required_transfers">Required transfers</string>
    <string name="available_drivers">Available drivers</string>
    <string name="select_your_things">Select your things</string>
    <string name="select_your_thing">Select your thing</string>
    <string name="next">Next</string>

    <string name="driverNationality">Driver nationality</string>
    <string name="license_number">license number</string>
    <string name="FirstName">First Name</string>
    <string name="secondName">Second name</string>
    <string name="ID_Number">ID Number</string>

    <string name="userInfo">User information</string>
    <string name="myNaglah">My trips</string>
    <string name="confirm">confirm</string>
    <string name="naglah">Naglah</string>
    <string name="requestNaglah">Request Naglah</string>
    <string name="My_wallet">My wallet</string>
    <string name="myInfo">My Info</string>
    <string name="sign_out">Sign Out</string>
    <string name="edit">Edit</string>
    <string name="allDrivers">All Drivers</string>
    <string name="naglah_place">Select Trip Place</string>
    <string name="inside_City">Inside City</string>
    <string name="betweenCities">Between Cities</string>
    <string name="evaluate_the_driver">Evaluate the driver (rate 0 to 5)</string>
    <string name="evaluate">Evaluate</string>
    <string name="payData">Pay Data</string>
    <string name="The_trial_period">The trial period</string>
    <string name="Participation">Participation</string>
    <string name="byTrip">By Trip</string>
    <string name="myWallet">My electronic Wallet</string>
    <string name="enter_subbmit_number">Enter subbmit number</string>
    <string name="set">set</string>
    <string name="chat">Chat</string>
    <string name="naglahName">Naglah Name</string>

</resources>
