<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:padding="@dimen/_10sdp"
    android:orientation="vertical"
    tools:context=".view.forgetPassword.ForgetActivity">



    <EditText
        android:id="@+id/et_forgetPasswordEmail"
        android:layout_width="match_parent"
        android:hint="@string/email"
        android:layout_margin="@dimen/_8sdp"
        android:layout_height="wrap_content"/>

    <EditText
        android:layout_margin="@dimen/_8sdp"
        android:id="@+id/et_forgetPasswordUserName"
        android:layout_width="match_parent"
        android:hint="@string/userName"
        android:layout_height="wrap_content"/>

    <RadioGroup
       android:layout_margin="@dimen/_8sdp"
        android:orientation="horizontal"
        android:ems="10"
        android:weightSum="2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RadioButton
            android:id="@+id/rb_forgetPassword_normalUser"
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/naqlaOwner"
            />
        <RadioButton
            android:id="@+id/rb_forgetPassword_carOWner"
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/driverOwner"
            />

    </RadioGroup>


    <Button
        android:id="@+id/btn_forgetPassword_send"
        android:layout_margin="@dimen/_8sdp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/send"
        />


</LinearLayout>