<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#535252"
    tools:context=".view.drive_Profile.CarInformation">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            >

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <ImageView
                    android:id="@+id/imgBackRecent"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:src="@drawable/ic_arrow_w_black_24dp"
                    android:tint="#fff" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/car_info"
                    android:textSize="@dimen/_14ssp"
                    android:textStyle="bold"
                    android:gravity="center"
                    android:textColor="@android:color/white"/>

            </RelativeLayout>
        </androidx.appcompat.widget.Toolbar>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="60dp"
            android:orientation="horizontal"
            android:gravity="center"
            android:weightSum="2">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_marginLeft="@dimen/_30sdp"
                android:layout_marginRight="@dimen/_30sdp"
                android:text="@string/car_type"
                android:padding="@dimen/_8sdp"
                android:textColor="#fff"
                android:textSize="@dimen/_14ssp"
                android:textStyle="bold" />

            <Spinner
                android:id="@+id/sp_carType"
                style="@style/Widget.AppCompat.Spinner"
                android:layout_width="150dp"
                android:layout_height="@dimen/_35sdp"
                android:layout_gravity="center"
                android:entries="@array/carsType"

                android:layout_marginLeft="@dimen/_20sdp"
                android:layout_marginRight="@dimen/_20sdp"
                android:backgroundTint="@color/mdtp_white"
                android:gravity="center" />


        </LinearLayout>
        <TextView
            android:id="@+id/tv_selectImage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="@dimen/_40sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:gravity="center"
            android:layout_marginRight="@dimen/_40sdp"
            android:text="@string/choose_car_image"
            android:textColor="#fff"
            android:textSize="@dimen/_14sdp"
            android:textStyle="bold" />


        <ImageView
            android:id="@+id/iv_carImage"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_gravity="center"
            android:layout_marginLeft="40dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="40dp"
            android:visibility="gone"/>




        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_marginRight="@dimen/_30sdp"
            android:orientation="horizontal"
            android:layout_marginLeft="@dimen/_30ssp"
            android:weightSum="2">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:id="@+id/et_panelNumber"
                android:layout_height="50dp"
                android:gravity="center"
                android:layout_weight="1"
                android:hint="@string/panal_id"
                android:textColorHint="@color/mdtp_white"
                android:textSize="@dimen/_14ssp"
                android:textColor="#000"
                android:textStyle="italic"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_20ssp"
            android:orientation="horizontal"
            android:layout_marginLeft="@dimen/_30ssp"
            android:layout_marginRight="@dimen/_30ssp"
            android:weightSum="2">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:gravity="center"
                android:id="@+id/et_maxWeight"
                android:layout_weight="1"
                android:hint="@string/maximum_weight"
                android:textColorHint="@color/mdtp_white"
                android:textSize="@dimen/_14ssp"
                android:textColor="#000"
               />

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_20ssp"
            android:orientation="horizontal"
            android:layout_marginLeft="@dimen/_30ssp"
            android:layout_marginRight="@dimen/_30ssp"
            android:weightSum="2">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="50dp"

                android:gravity="center"
                android:layout_weight="1"
                android:hint="@string/driver_name"
                android:id="@+id/et_driveName"
                android:textColorHint="@color/mdtp_white"
                android:textSize="@dimen/_14ssp"
                android:textColor="#000"
                android:textStyle="italic"/>

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="25dp"

            android:layout_marginTop="30dp"
            android:orientation="horizontal"
            android:weightSum="2">
            <Spinner
                android:id="@+id/et_city"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_35sdp"
                android:layout_gravity="center"
                android:textAlignment="center"
                style="@style/Widget.AppCompat.Spinner"
                android:layout_marginLeft="@dimen/_90sdp"
                android:layout_marginRight="@dimen/_90sdp"
                android:background="@drawable/spin_shape"
                android:gravity="center" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="50dp"
            android:background="@color/mdtp_white"
            android:orientation="horizontal"
            android:layout_gravity="end"
            android:weightSum="2">


            <Button
                android:id="@+id/btn_ok"
                android:layout_width="100dp"
                android:layout_height="50dp"
                android:gravity="center"
                android:layout_gravity="end"
                android:text="@string/submit"
                android:textColor="@color/colorPrimary"
                android:textSize="18dp"
                android:background="@color/mdtp_white"
                android:textStyle="bold" />
            <Button
                android:id="@+id/btn_cancel"
                android:layout_width="100dp"
                android:layout_height="50dp"
                android:gravity="center"
                android:layout_gravity="end"
                android:background="@color/mdtp_white"
                android:text="@string/cancel"
                android:textColor="@color/colorPrimary"
                android:textSize="18dp"
                android:textStyle="bold" />



        </LinearLayout>

    </LinearLayout>



</ScrollView>