<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    tools:context=".view.Choose_Nagla_Dat.Choose_Nagla_Date">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="#535252"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="#535252"
            >

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="#535252">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <ImageView
                        android:id="@+id/imgBackRecent"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_marginRight="@dimen/_20sdp"
                        android:src="@drawable/ic_arrow_w_black_24dp"
                        android:tint="#fff" />

                </RelativeLayout>
            </androidx.appcompat.widget.Toolbar>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_gravity="top|center"
                android:layout_marginLeft="40dp"
                android:layout_marginTop="50dp"
                android:layout_marginRight="40dp"
                android:gravity="center"
                android:text="@string/date_and_time_order"
                android:fontFamily="@font/lemon"
                android:textColor="#fff"
                android:textSize="@dimen/_18ssp"
                android:textStyle="bold" />


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:background="#535252"
                android:layout_marginTop="@dimen/_30sdp"
                android:layout_marginStart="@dimen/_20sdp"
                android:layout_marginEnd="@dimen/_20sdp"
                android:layout_marginBottom="@dimen/_30sdp">




                <Button
                    android:id="@+id/now"
                    android:layout_width="@dimen/_120sdp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:background="@drawable/btn_style"
                    android:layout_alignParentStart="true"
                    android:text="@string/immediately"
                    android:textColor="#535252"
                    android:textSize="@dimen/_18ssp"
                    android:textStyle="bold"
                    android:fontFamily="@font/lemon"
                    android:layout_alignParentLeft="true" />

                <Button
                    android:id="@+id/later"
                    android:layout_width="@dimen/_120sdp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:background="@drawable/btn_style"
                    android:layout_alignParentEnd="true"
                    android:text="@string/later"
                    android:textColor="#535252"
                    android:textSize="@dimen/_18ssp"
                    android:textStyle="bold"
                    android:fontFamily="@font/lemon"
                    android:layout_alignParentRight="true" />
            </RelativeLayout>
        </LinearLayout>
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            >
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/shape"

    >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/_50sdp"
            android:layout_marginTop="@dimen/_30sdp"
            android:orientation="horizontal"
            android:weightSum="2">
            <TextView
                android:id="@+id/date"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:background="#fff"
                android:text="@string/date"
                android:textColor="#000"
                android:textSize="@dimen/_16ssp"
                android:layout_marginLeft="@dimen/_10sdp"
                android:layout_marginRight="@dimen/_10sdp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/dateTxt"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="@dimen/_10sdp"
                android:layout_marginRight="@dimen/_10sdp"
                android:layout_weight="1"
                android:gravity="center"
                android:background="@color/mdtp_white"
                android:text="@string/day"
                android:textColor="#000"
                android:textSize="@dimen/_16ssp"
                android:textStyle="bold" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/_50sdp"
            android:layout_marginTop="30dp"
            android:orientation="horizontal"
            android:weightSum="2">


            <TextView
                android:id="@+id/time"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:background="#fff"
                android:text="@string/time"
                android:textColor="#000"
                android:textSize="@dimen/_16ssp"
                android:layout_marginLeft="@dimen/_10sdp"
                android:layout_marginRight="@dimen/_10sdp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/time_txt"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="@dimen/_10sdp"
                android:layout_marginRight="@dimen/_10sdp"
                android:layout_weight="1"
                android:gravity="center"
                android:background="@color/mdtp_white"
                android:text="@string/day"
                android:textColor="#000"
                android:textSize="@dimen/_16ssp"
                android:textStyle="bold" />

        </LinearLayout>


        <TextView
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_gravity="top|center"
            android:layout_marginLeft="40dp"
            android:layout_marginTop="50dp"
            android:layout_marginRight="40dp"
            android:gravity="center"
            android:text="@string/about_order"
            android:textColor="#000"
            android:textSize="@dimen/_18ssp"
            android:textStyle="bold"
            android:fontFamily="@font/lemon"/>


        <EditText
            android:id="@+id/details"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_70sdp"
            android:layout_gravity="top|center"
            android:layout_marginLeft="40dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="40dp"
            android:background="@drawable/bottonshape"
            android:gravity="center"
            android:hint="@string/about_order"
            android:textColor="#000"
            android:textSize="@dimen/_16ssp"
            android:textStyle="bold" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="30dp"
            android:background="@color/mdtp_white"
            android:orientation="horizontal"
            android:weightSum="2">

            <Button
                android:id="@+id/submitNaglaha"
                android:layout_width="@dimen/_110sdp"
                android:layout_height="wrap_content"
                android:layout_gravity="top|center"
                android:layout_marginLeft="@dimen/_20sdp"
                android:layout_marginRight="@dimen/_10sdp"
                android:layout_weight="1"
                android:background="@drawable/order_btn_style"
                android:text="@string/submit"
                android:textColor="#fff"
                android:textSize="@dimen/_16ssp"
                android:textStyle="bold" />

            <Button
                android:layout_width="@dimen/_110sdp"
                android:layout_height="wrap_content"
                android:layout_gravity="top|center"
                android:layout_marginLeft="@dimen/_10sdp"
                android:layout_marginRight="@dimen/_20sdp"
                android:layout_weight="1"
                android:id="@+id/cancel"
                android:background="@drawable/cancel_btn_style"
                android:text="@string/cancel"
                android:textColor="#fff"
                android:textSize="@dimen/_16ssp"
                android:textStyle="bold" />


        </LinearLayout>
</LinearLayout>
        </ScrollView>


    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>