<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:background="@android:color/white"
    tools:context=".view.payment.NextPayment">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:elevation="@dimen/_10sdp"
        android:background="#CC535252"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:id="@+id/constr"
            android:layout_width="match_parent"
            android:layout_height="match_parent"

            android:orientation="horizontal">


            <ImageView
                android:id="@+id/list"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|start"
                android:background="@drawable/ic_arrow_w_black_24dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/search_edit_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="@dimen/_20sdp"
                android:layout_marginEnd="@dimen/_20sdp"
                android:fontFamily="@font/arabfont"
                android:text="بيانات الدفع"
                android:textAlignment="center"
                android:textColor="#fff"
                android:textSize="@dimen/_14ssp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@+id/list"
                app:layout_constraintTop_toTopOf="parent" />


        </LinearLayout>
    </androidx.appcompat.widget.Toolbar>


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="@dimen/_165sdp"
        android:layout_height="@dimen/_150sdp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:elevation="@dimen/_10sdp"
        android:src="@drawable/logo"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="@dimen/_70sdp"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:id="@+id/card_number"
            android:layout_height="@dimen/_45sdp"
            android:layout_marginStart="@dimen/_25sdp"
            android:layout_marginEnd="@dimen/_25sdp"
            android:layout_marginRight="@dimen/_30sdp"
            android:hint="@string/card_number"
            android:fontFamily="@font/janna"
            android:inputType="number"
            android:textColorHint="#000"
            android:textSize="@dimen/_14ssp"
            android:textColor="#000"
            />
        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:id="@+id/card_holder"
            android:layout_height="@dimen/_45sdp"
            android:layout_marginStart="@dimen/_25sdp"
            android:layout_marginEnd="@dimen/_25sdp"
            android:layout_marginRight="@dimen/_30sdp"
            android:hint="@string/card_holder"
            android:fontFamily="@font/janna"
            android:inputType="number"
            android:textColorHint="#000"
            android:textSize="@dimen/_14ssp"
            android:textColor="#000"
            />

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:id="@+id/month"
            android:layout_height="@dimen/_45sdp"
            android:layout_marginStart="@dimen/_25sdp"
            android:layout_marginEnd="@dimen/_25sdp"
            android:layout_marginRight="@dimen/_30sdp"
            android:hint="@string/month"
            android:fontFamily="@font/janna"
            android:inputType="number"
            android:textColorHint="#000"
            android:textSize="@dimen/_14ssp"
            android:textColor="#000"
            />
        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:id="@+id/year"
            android:layout_height="@dimen/_45sdp"
            android:layout_marginStart="@dimen/_25sdp"
            android:layout_marginEnd="@dimen/_25sdp"
            android:layout_marginRight="@dimen/_30sdp"
            android:hint="@string/year"
            android:inputType="number"
            android:textColorHint="#000"
            android:fontFamily="@font/janna"
            android:textSize="@dimen/_14ssp"
            android:textColor="#000"
            />
        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:id="@+id/cvv"
            android:layout_height="@dimen/_45sdp"
            android:layout_marginStart="@dimen/_25sdp"
            android:layout_marginEnd="@dimen/_25sdp"
            android:layout_marginRight="@dimen/_30sdp"
            android:hint="@string/cvv"
            android:fontFamily="@font/janna"
            android:inputType="number"
            android:textColorHint="#000"
            android:textSize="@dimen/_14ssp"
            android:textColor="#000"
            />
        <Button
            android:id="@+id/pay"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_45sdp"
            android:layout_marginEnd="@dimen/_25sdp"
            android:layout_marginStart="@dimen/_25sdp"
            android:layout_gravity="center_horizontal"
            android:textSize="@dimen/_16ssp"
            android:textColor="@color/black"
            android:text="@string/pay"
            android:fontFamily="@font/lemon"
            android:layout_marginBottom="@dimen/_30sdp"/>

    </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>


</ScrollView>